# BicBrickBread

./: CMakeLists.txt  Doxyfile  README.md  TheGame.cpp  TheGameQt.pro  UnityInterface.cs  UnityWrapper.cpp  Word-Tic-Tac-Toe-code-review.docx  XO_Classes.cpp  XO_Demo.cpp  command.txt  test_wrapper.cpp  ~$rd-Tic-Tac-Toe-code-review.docx
CodeRview/: Word-Tic-Tac-Toe-code-review.docx
GUI/: gamewindow.cpp  gamewindow.h  main.cpp  mainwindow.cpp  mainwindow.h
Games/4x4_Tic_Tac_Toe/: 4by4_XO.cpp  4by4_XO.h
Games/Four_in_a_row/: four.cpp  four.h
Games/Large_Tic_Tac_Toe/: Large_Tic_Tac_Toe.cpp  Large_Tic_Tac_Toe.h
Games/Memory_Tic_Tac_Toe/: Memory_Tic_Tac_Toe.cpp  Memory_Tic_Tac_Toe.h
Games/Obstacles_Tic_Tac_Toe/: Obstacles_Tic_Tac_Toe.cpp  Obstacles_Tic_Tac_Toe.h
Games/PyramidXO/: PyramidXO.cpp  PyramidXO.h
Games/SUS/: SUS.cpp  SUS.h
Games/Ultimate_Tic_Tac_Toe/: Ultimate.cpp  Ultimate.h
Games/Word_Tic_Tac_Toe/: Word_Tic_Tac_Toe.cpp  Word_Tic_Tac_Toe.h
Games/XO_inf/: XO_inf.cpp  XO_inf.h
Games/XO_num/: xo_num.cpp  xo_num.h
Games/anti_XO/: Anti_XO.cpp  Anti_XO.h
Games/diamond_XO/: dia_XO.cpp  dia_XO.h
Neural_Network/Include/: Layer.h  Matrix.h  NeuralNetwork.h
Neural_Network/Source/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp
Refrence/: XO_Classes.cpp
TUI/: ASCIIArt.cpp  ASCIIArt.h  AnimatedASCIIArt.cpp  AnimatedASCIIArt.h  Box.cpp  Box.h  Button.cpp  Button.h  Component.h  Demo.cpp  Desktop.cpp  Desktop.h  Graphics.h  Label.cpp  Label.h  TUI.h
docs/html/: 4by4___x_o_8h.js  (+1246 more)
header/: AI.h  BoardGame_Classes.h  Custom_UI.h  TUI_UI.h  XO_Classes.h
(+112 files in other folders)
